tests/reference/asr-test_dict_key6-1d334b2.stderr
semantic error: Unhashable type: 'set'
 --> tests/errors/test_dict_key6.py:2:12
  |
2 |     print({{1, 2}: "first", {3, 4}: "second"})
  |            ^^^^^^ Mutable type 'set' cannot become a key in dict. Hint: Use an immutable type for key.
